--- a/_includes/recent-posts.html
+++ b/_includes/recent-posts.html
@@ -6,7 +6,7 @@
         <a href="{{ site.baseurl }}{{ post.url }}">
           {{ post.title }}
         </a>
-        <span class="post-date archive-date">{{ post.date | date_to_string }}</span>
+        <span class="archive-date">{{ post.date | date_to_string }}</span>
       </li>
     {% endfor %}
   </ul>
