--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -1,42 +1,42 @@
-<div class="post-date">
-
-  <div class="icon icon-clock"></div>
-  
-  {% if page.path contains '_posts' %}
-    <time datetime="{{ page.date | date_to_xmlschema }}" aria-label="Published date: {{ page.date | date: '%b %-d, %Y' }}">{{ page.date | date: "%b %-d, %Y" }}</time>
-  {% endif %}
-  {% if post.path contains '_posts' %}
-    <time datetime="{{ post.date | date_to_xmlschema }}" aria-label="Published date: {{ post.date | date: '%b %-d, %Y' }}">{{ post.date | date: "%b %-d, %Y" }}</time>
-  {% endif %}
-
-</div>
-
-{% if page.path contains '_posts' or post.path contains '_posts' %}
-  <div class="post-tags">
-    {% if page.tags.size > 0 or post.tags.size > 0 %}
-  
-      <div class="icon icon-tags"></div>
-
-      <ul>
-        {% for tag in page.tags %}
-          <li><a href="/tags/{{ tag | downcase | url_encode }}" aria-label="Post category: {{ tag }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
-        {% endfor %}
-        
-        {% for tag in post.tags %}
-          <li><a href="/tags/{{ tag | downcase | url_encode }}" aria-label="Post category: {{ tag }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
-        {% endfor %}
-      </ul>
+<div class="post-metadata">
+  <div>
+    <span class="icon icon-clock"></span>
+    {% if page.path contains '_posts' %}
+      <time datetime="{{ page.date | date_to_xmlschema }}" aria-label="Published date: {{ page.date | date: '%b %-d, %Y' }}">{{ page.date | date: "%b %-d, %Y" }}</time>
+    {% endif %}
+    {% if post.path contains '_posts' %}
+      <time datetime="{{ post.date | date_to_xmlschema }}" aria-label="Published date: {{ post.date | date: '%b %-d, %Y' }}">{{ post.date | date: "%b %-d, %Y" }}</time>
     {% endif %}
   </div>
 
-{% endif %}
+  {% if page.path contains '_posts' or post.path contains '_posts' %}
+    <div>
+      <span class="icon icon-tags"></span>
+      {% if page.tags.size > 0 or post.tags.size > 0 %}
+        
+          {% for tag in page.tags %}
+            <span>
+              <a href="/tags/{{ tag | downcase | url_encode }}" aria-label="Post category: {{ tag }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}
+            </span>
+          {% endfor %}
 
-<div class="post-comments">
-  <div class="icon icon-comments"></div>
-  {% if page.path contains '_posts' %}
-    <a href="{{ site.baseurl }}{{ page.url }}#disqus_thread" aria-label="Go to comments about '{{ page.title }}'">Comments</a>
+          {% for tag in post.tags %}
+            <span>
+              <a href="/tags/{{ tag | downcase | url_encode }}" aria-label="Post category: {{ tag }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}
+            </span>
+          {% endfor %}
+      {% endif %}
+    </div>
+
   {% endif %}
-  {% if post.path contains '_posts' %}
-    <a href="{{ site.baseurl }}{{ post.url }}#disqus_thread" aria-label="Go to comments about this post">Comments</a>
-  {% endif %}
+
+  <div>
+    <span class="icon icon-comments"></span>
+    {% if page.path contains '_posts' %}
+      <a href="{{ site.baseurl }}{{ page.url }}#disqus_thread" aria-label="Go to comments about '{{ page.title }}'">Comments</a>
+    {% endif %}
+    {% if post.path contains '_posts' %}
+      <a href="{{ site.baseurl }}{{ post.url }}#disqus_thread" aria-label="Go to comments about this post">Comments</a>
+    {% endif %}
+  </div>
 </div>
