--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
         <span>{{ site.tagline }}</span>
       </header>
 
-      <div id="content" role="main" aria-label="Main content">
+      <main id="content">
         {{ content }}
-      </div>
+      </main>
 
       <footer>
         {% include social-channels.html %}
