--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -2,10 +2,10 @@
   <div>
     <span class="icon icon-clock"></span>
     {% if page.path contains '_posts' %}
-      <time datetime="{{ page.date | date_to_xmlschema }}" aria-label="Published on {{ page.date | date: '%b %-d, %Y' }}">{{ page.date | date: "%b %-d, %Y" }}</time>
+      <span aria-label="Published on {{ page.date | date: '%b %-d, %Y' }}">{{ page.date | date: "%b %-d, %Y" }}</span>
     {% endif %}
     {% if post.path contains '_posts' %}
-      <time datetime="{{ post.date | date_to_xmlschema }}" aria-label="Published on {{ post.date | date: '%b %-d, %Y' }}">{{ post.date | date: "%b %-d, %Y" }}</time>
+      <span aria-label="Published on {{ post.date | date: '%b %-d, %Y' }}">{{ post.date | date: "%b %-d, %Y" }}</span>
     {% endif %}
   </div>
 
