--- a/_includes/head.html
+++ b/_includes/head.html
@@ -91,14 +91,11 @@
     <meta property="twitter:description" content="{{ site.description }}">
   {% endif %}
 
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/favicon/favicon-32x32.png?v={{ site.time | date: '%s' }}">
-  <link rel="icon" type="image/svg+xml" sizes="any" href="{{ site.baseurl}}/img/favicon/favicon.svg" />
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/img/favicon/apple-touch-icon.png?v={{ site.time | date: '%s' }}">
-  <link rel="mask-icon" href="{{ site.baseurl }}/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon/favicon.ico?v={{ site.time | date: '%s' }}">
-  <link rel="manifest" href="{{ site.baseurl }}/img/favicon//manifest.webmanifest" />
-  <meta name="msapplication-config" content="{{ site.baseurl }}/img/favicon/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="icon" href="{{ site.baseurl }}/img/favicon/favicon.ico?v={{ site.time | date: '%s' }}" sizes="any">
+  <link rel="icon" href="{{ site.baseurl}}/img/favicon/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/favicon/apple-touch-icon.png?v={{ site.time | date: '%s' }}">
+  <link rel="manifest" href="{{ site.baseurl }}/img/favicon//manifest.webmanifest">
+  <meta name="theme-color" content="#303030">
 
   <link rel="me" href="{{ site.author.codepen }}">
   <link rel="me" href="{{ site.author.github }}">
