--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -1,6 +1,6 @@
 <div class="post-metadata">
   <div>
-    <span class="icon icon-clock"></span>
+    <span class="icon icon-calendar"></span>
     {% if page.path contains '_posts' %}
       <span aria-label="Published on {{ page.date | date: '%b %-d, %Y' }}">{{ page.date | date: "%b %-d, %Y" }}</span>
     {% endif %}
