--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 
       <footer>
         {% include social-channels.html %}
-        <span>&copy; <script>document.write(new Date().getFullYear())</script> {{ site.author.name }}. All rights reserved.</span>
+        <span>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All rights reserved.</span>
       </footer>
     </div>
     
