--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -18,6 +18,10 @@
   text-align: center;
   width: 50%;
 
+  &:only-child {
+    width: 100%;
+  }
+
   &:first-child:not(:last-child) {
     margin-right: .5rem;
   }
