Added header to post

--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -1,4 +1,4 @@
-<div class="post-metadata">
+<div class="post-meta">
   <div>
     <span class="icon icon-calendar"></span>
     {% if page.path contains '_posts' %}
