--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,4 +1,4 @@
-<section class="pagination" role="navigation" aria-label="Go to the next or previous page">
+<div class="pagination" role="navigation" aria-label="Go to the next or previous page">
   {% if paginator.total_pages > 1 %}
     {% if paginator.previous_page %}
       <a class="pagination-item" href="{{ paginator.previous_page_path | prepend: site.baseurl }}">Newer posts</a>
@@ -14,4 +14,4 @@
       <a class="pagination-item" href="{{page.previous.url}}">Previous post</a>
     {% endif %}
   {% endif %}
-</section>
+</div>
