Switch to CSS variables

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,7 +1,3 @@
-// Body resets
-//
-// Update the foundational and global aspects of the page.
-
 *,
 *::before,
 *::after {
@@ -15,30 +11,30 @@ body {
 }
 
 html {
-  font-size: $root-font-size;
-  line-height: $root-line-height;
-  text-size-adjust: $root-font-size;
+  font-size: var(--root-font-size);
+  line-height: var(--root-line-height);
+  text-size-adjust: var(--root-font-size);
   
   @media only screen and (min-width: $large-breakpoint) {
-    font-size: $large-font-size;
+    font-size: var(--large-font-size);
   }
 }
 
 body {
-  color: $body-color;
-  font-family: $root-font-family-fallback;
+  color: var(--body-color);
+  font-family: var(--root-font-family-fallback);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
 }
 
 .fonts-loaded body {
-  font-family: $root-font-family-regular;
+  font-family: var(--root-font-family-regular);
 }
 
 // No `:visited` state is required by default (browsers will use `a`)
 a {
-  color: $link-color;
+  color: var(--link-color);
   text-decoration: none;
   transition: color ease .2s;
 
@@ -87,14 +83,14 @@ figure {
   }
 
   figcaption {
-    font-family: $root-font-family-regular;
+    font-family: var(--root-font-family-regular);
     font-size: .85rem;
-    color: $gray-3;
+    color: var(--gray-3);
   }
 }
 
 table {
-  border: 1px solid $border-color;
+  border: 1px solid var(--border-color);
   border-collapse: collapse;
   font-size: .85rem;
   margin-bottom: 1rem;
@@ -103,18 +99,18 @@ table {
 
 td,
 th {
-  border: 1px solid $border-color;
+  border: 1px solid var(--border-color);
   padding: .25rem .5rem;
 }
 
 th {
-  font-family: $secondary-font-family-bold;
+  font-family: var(--secondary-font-family-bold);
   text-align: left;
 }
 
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
-  background-color: $gray-1;
+  background-color: var(--gray-1);
 }
 
 .icon {
@@ -126,6 +122,10 @@ tbody tr:nth-child(odd) th {
 .icon,
 .icon-social {
   background-repeat: no-repeat;
+
+  background-size: 30px;
+  height: 30px;
+  width: 30px;
 
   .sr-hidden {
     height: 1px;
@@ -169,17 +169,6 @@ tbody tr:nth-child(odd) th {
   }
 }
 
-.icon-facebook {
-  background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 512 512' fill='%23515151' xmlns='http://www.w3.org/2000/svg' aria-label='Facebook'%3E%3Cpath d='M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z' class=''%3E%3C/path%3E%3C/svg%3E");
-  background-size: 30px;
-  height: 30px;
-  width: 30px;
-
-  &:hover {
-    background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 512 512' fill='%230074d9' xmlns='http://www.w3.org/2000/svg' aria-label='Facebook'%3E%3Cpath d='M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z' class=''%3E%3C/path%3E%3C/svg%3E");
-  }
-}
-
 .icon-github {
   background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 27 32' fill='%23515151' xmlns='http://www.w3.org/2000/svg' aria-label='GitHub'%3E%3Cpath d='M13.728 2.272q3.712 0 6.88 1.856t4.992 4.992 1.824 6.88q0 4.48-2.624 8.064t-6.752 4.96q-0.48 0.096-0.704-0.128t-0.224-0.544q0-0.032 0-1.376t0-2.4q0-1.728-0.928-2.528 1.024-0.096 1.824-0.32t1.696-0.704 1.44-1.184 0.96-1.856 0.352-2.688q0-2.144-1.408-3.68 0.672-1.632-0.128-3.648-0.512-0.16-1.472 0.192t-1.632 0.8l-0.672 0.416q-1.664-0.48-3.424-0.48t-3.456 0.48q-0.256-0.192-0.736-0.48t-1.504-0.704-1.504-0.224q-0.8 2.016-0.16 3.648-1.408 1.536-1.408 3.68 0 1.504 0.384 2.656t0.928 1.888 1.44 1.184 1.664 0.704 1.824 0.32q-0.672 0.64-0.864 1.856-0.384 0.16-0.8 0.256t-1.024 0.096-1.152-0.384-0.992-1.12q-0.352-0.576-0.864-0.928t-0.896-0.448l-0.352-0.032q-0.384 0-0.512 0.064t-0.096 0.224 0.16 0.256 0.224 0.192l0.128 0.096q0.384 0.192 0.768 0.672t0.576 0.928l0.192 0.416q0.224 0.672 0.768 1.088t1.184 0.544 1.248 0.096 0.992-0.032l0.416-0.096q0 0.704 0 1.6t0.032 0.96q0 0.32-0.256 0.544t-0.704 0.128q-4.128-1.376-6.752-4.96t-2.624-8.064q0-3.744 1.856-6.88t4.96-4.992 6.912-1.856zM5.184 21.984q0.064-0.128-0.096-0.224-0.192-0.032-0.256 0.032-0.032 0.128 0.128 0.224t0.224-0.032zM5.76 22.592q0.128-0.096-0.032-0.288-0.192-0.16-0.288-0.064-0.128 0.096 0.032 0.288t0.288 0.064zM6.272 23.392q0.192-0.128 0-0.352-0.128-0.224-0.288-0.096-0.16 0.096 0 0.32t0.288 0.128zM7.040 24.128q0.128-0.128-0.064-0.32-0.224-0.224-0.352-0.064-0.16 0.16 0.064 0.352 0.192 0.192 0.352 0.032zM8.064 24.576q0.032-0.192-0.256-0.288-0.256-0.064-0.32 0.128t0.224 0.288q0.256 0.096 0.352-0.128zM9.184 24.672q0-0.224-0.32-0.192-0.288 0-0.288 0.192 0 0.224 0.32 0.192 0.288 0 0.288-0.192zM10.208 24.512q-0.032-0.224-0.32-0.16-0.288 0.032-0.256 0.256t0.32 0.128 0.256-0.224z'%3E%3C/path%3E%3C/svg%3E");
   background-size: 30px;
@@ -199,17 +188,6 @@ tbody tr:nth-child(odd) th {
 
   &:hover {
     background-image: url("data:image/svg+xml,%3Csvg width='28' height='32' viewBox='0 0 28 32' fill='%230074d9' xmlns='http://www.w3.org/2000/svg' aria-label='LinkedIn'%3E%3Cpath d='M4.224 25.248h4.128v-12.384h-4.128v12.384zM8.64 9.024q-0.032-0.928-0.672-1.536t-1.632-0.608-1.696 0.608-0.672 1.536q0 0.928 0.64 1.536t1.664 0.608v0q1.056 0 1.696-0.608t0.672-1.536zM19.072 25.248h4.128v-7.104q0-2.752-1.312-4.16t-3.424-1.408q-2.432 0-3.744 2.080h0.032v-1.792h-4.128q0.064 1.184 0 12.384h4.128v-6.944q0-0.672 0.128-0.992 0.256-0.608 0.8-1.056t1.312-0.448q2.080 0 2.080 2.816v6.624zM27.424 7.424v17.152q0 2.112-1.504 3.616t-3.648 1.536h-17.12q-2.144 0-3.648-1.536t-1.504-3.616v-17.152q0-2.112 1.504-3.616t3.648-1.536h17.12q2.144 0 3.648 1.536t1.504 3.616z'%3E%3C/path%3E%3C/svg%3E");
-  }
-}
-
-.icon-reddit {
-  background-image: url("data:image/svg+xml,%3Csvg width='32' height='30' viewBox='0 0 30 32' fill='%23515151' xmlns='http://www.w3.org/2000/svg' aria-label='reddit'%3E%3Cpath d='M28 13.219c0 1.219-0.688 2.266-1.703 2.781 0.125 0.484 0.187 0.984 0.187 1.5 0 4.937-5.578 8.937-12.453 8.937-6.859 0-12.437-4-12.437-8.937 0-0.5 0.063-1 0.172-1.469-1.047-0.516-1.766-1.578-1.766-2.812 0-1.719 1.391-3.109 3.109-3.109 0.891 0 1.687 0.375 2.266 0.984 2.109-1.469 4.922-2.422 8.047-2.531l1.813-8.141c0.063-0.281 0.359-0.469 0.641-0.406l5.766 1.266c0.375-0.75 1.172-1.281 2.078-1.281 1.297 0 2.344 1.047 2.344 2.328 0 1.297-1.047 2.344-2.344 2.344-1.281 0-2.328-1.047-2.328-2.328l-5.219-1.156-1.625 7.375c3.141 0.094 5.984 1.031 8.109 2.5 0.562-0.594 1.359-0.953 2.234-0.953 1.719 0 3.109 1.391 3.109 3.109zM6.531 16.328c0 1.297 1.047 2.344 2.328 2.344 1.297 0 2.344-1.047 2.344-2.344 0-1.281-1.047-2.328-2.344-2.328-1.281 0-2.328 1.047-2.328 2.328zM19.187 21.875c0.234-0.234 0.234-0.578 0-0.812-0.219-0.219-0.578-0.219-0.797 0-0.938 0.953-2.953 1.281-4.391 1.281s-3.453-0.328-4.391-1.281c-0.219-0.219-0.578-0.219-0.797 0-0.234 0.219-0.234 0.578 0 0.812 1.484 1.484 4.344 1.594 5.187 1.594s3.703-0.109 5.187-1.594zM19.141 18.672c1.281 0 2.328-1.047 2.328-2.344 0-1.281-1.047-2.328-2.328-2.328-1.297 0-2.344 1.047-2.344 2.328 0 1.297 1.047 2.344 2.344 2.344z'%3E%3C/path%3E%3C/svg%3E");
-  background-size: 32px;
-  height: 30px;
-  width: 32px;
-
-  &:hover {
-    background-image: url("data:image/svg+xml,%3Csvg width='32' height='30' viewBox='0 0 30 32' fill='%230074d9' xmlns='http://www.w3.org/2000/svg' aria-label='reddit'%3E%3Cpath d='M28 13.219c0 1.219-0.688 2.266-1.703 2.781 0.125 0.484 0.187 0.984 0.187 1.5 0 4.937-5.578 8.937-12.453 8.937-6.859 0-12.437-4-12.437-8.937 0-0.5 0.063-1 0.172-1.469-1.047-0.516-1.766-1.578-1.766-2.812 0-1.719 1.391-3.109 3.109-3.109 0.891 0 1.687 0.375 2.266 0.984 2.109-1.469 4.922-2.422 8.047-2.531l1.813-8.141c0.063-0.281 0.359-0.469 0.641-0.406l5.766 1.266c0.375-0.75 1.172-1.281 2.078-1.281 1.297 0 2.344 1.047 2.344 2.328 0 1.297-1.047 2.344-2.344 2.344-1.281 0-2.328-1.047-2.328-2.328l-5.219-1.156-1.625 7.375c3.141 0.094 5.984 1.031 8.109 2.5 0.562-0.594 1.359-0.953 2.234-0.953 1.719 0 3.109 1.391 3.109 3.109zM6.531 16.328c0 1.297 1.047 2.344 2.328 2.344 1.297 0 2.344-1.047 2.344-2.344 0-1.281-1.047-2.328-2.344-2.328-1.281 0-2.328 1.047-2.328 2.328zM19.187 21.875c0.234-0.234 0.234-0.578 0-0.812-0.219-0.219-0.578-0.219-0.797 0-0.938 0.953-2.953 1.281-4.391 1.281s-3.453-0.328-4.391-1.281c-0.219-0.219-0.578-0.219-0.797 0-0.234 0.219-0.234 0.578 0 0.812 1.484 1.484 4.344 1.594 5.187 1.594s3.703-0.109 5.187-1.594zM19.141 18.672c1.281 0 2.328-1.047 2.328-2.344 0-1.281-1.047-2.328-2.328-2.328-1.297 0-2.344 1.047-2.344 2.328 0 1.297 1.047 2.344 2.344 2.344z'%3E%3C/path%3E%3C/svg%3E");
   }
 }
 
