--- a/_includes/recent-posts.html
+++ b/_includes/recent-posts.html
@@ -1,12 +1,12 @@
 <aside class="related" role="complementary" aria-label="Recent posts"> 
   <h3>Recent posts</h3>
-  <ul class="related-posts">
+  <ul>
     {% for post in site.posts limit:3 %}
       <li>
         <a href="{{ site.baseurl }}{{ post.url }}">
           {{ post.title }}
         </a>
-        <span class="archive-date">{{ post.date | date_to_string }}</span>
+        <div class="archive-date">{{ post.date | date_to_string }}</div>
       </li>
     {% endfor %}
   </ul>
