--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -7,12 +7,10 @@ title: Tags
   <h3>Posts in category: {{ page.tag }}</h2>
   {% for post in site.tags[page.tag] %}
   <div class="row">
-    <span>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-    </span>
-    <span class="archive-date">
+    <a href="{{ post.url }}">{{ post.title }}</a>
+    <div class="archive-date">
       {{ post.date | date: "%b %-d, %Y" }}
-    </span>
+    </div>
   </div>
   {% endfor %}
 </section>
